--- a/GuessNumber.ipynb
+++ b/GuessNumber.ipynb
@@ -11,10 +11,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random number between 0 and 20 has been generated\n",
-      "Introduce your guess number: 10\n",
-      "Try one more time, a bit higher\n",
-      "Introduce your guess number: 15\n",
+      "A random number between 0 and 20 has been generated\n",
+      "Take a guess: 10\n",
+      "Try once more, a bit higher\n",
+      "Take a guess: 15\n",
       "Excellent, Well done!\n",
       "Yes, you can!\n"
      ]
@@ -23,17 +23,17 @@
    "source": [
     "import random\n",
     "randomNumber = random.randrange(0,20)\n",
-    "print(\"Random number between 0 and 20 has been generated\")\n",
+    "print(\"A random number between 0 and 20 has been generated\")\n",
     "guessed = False\n",
     "while guessed==False:\n",
-    "    userNumber = int(input(\"Introduce your guess number: \"))\n",
+    "    userNumber = int(input(\"Take a guess: \"))\n",
     "    if userNumber==randomNumber:\n",
     "        guessed = True\n",
     "        print(\"Excellent, Well done!\")\n",
     "    elif userNumber>randomNumber:\n",
-    "        print(\"Try one more time, a bit lower\")\n",
+    "        print(\"Try once more, a bit lower\")\n",
     "    elif userNumber < randomNumber:\n",
-    "        print(\"Try one more time, a bit higher\")\n",
+    "        print(\"Try once more, a bit higher\")\n",
     "print(\"Yes, you can!\")"
    ]
   },
